--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
+    "emailjs": "^3.7.0",
+    "emailjs-com": "^3.2.0",
+    "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-ga": "^3.3.0",
+    "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.2.0",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
